# clinical-xai

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-build.yml  code-coverage.yml  publish-to-testpypi.yml
demo/: diabetes_clf.onnx  science-fair-demo.ipynb
src/clinicalxai/: __init__.py  cli.py  datasets.py  ethical_eval.py  generate_report.py  model.py  plots.py
src/clinicalxai/explainers/: base.py  classifier.py
src/clinicalxai/templates/: report.html
tests/: conftest.py  test_classifier.py  test_ethical_eval.py  test_generate_report.py  test_model.py  test_package.py  test_plots.py
