[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinicalxai"
version = "0.1.0"
description = "An ethical eXplainable AI (XAI) tool for clinical model analysis and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Ally Atkins", email = "ally.atkins2000@gmail.com"},
]
keywords = [
  "machine learning",
  "xai",
  "explainability",
  "shap",
  "clinical",
  "ethical",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy",
  "pandas",
  "shap",
  "onnxruntime",
  "jinja2",
  "matplotlib",
  "seaborn",
  "plotly",
  "scikit-learn",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "skl2onnx",
  "xgboost-cpu",
  "onnxmltools",
]

[project.scripts]
clinicalxai = "clinicalxai.cli:main"

[project.urls]
Homepage = "https://github.com/atkinsa21/clinical-xai"
Repository = "https://github.com/atkinsa21/clinical-xai"
Documentation = "https://github.com/atkinsa21/clinical-xai"
Issues = "https://github.com/atkinsa21/clinical-xai/issues"

[tool.hatch.version]
path = "src/clinicalxai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clinicalxai"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["src/clinicalxai"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
